[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Stats/HealthBar/healthbar_fill.png" type="Texture" id=1]
[ext_resource path="res://Player/Stats/HealthBar/healthbar_bg.png" type="Texture" id=2]
[ext_resource path="res://Player/Stats/HealthBar/HealthBar.gd" type="Script" id=3]

[node name="HealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -319.0
margin_bottom = -180.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 102.641
margin_top = 99.9359
margin_right = 499.641
margin_bottom = 170.936
rect_scale = Vector2( 0.25, 0.1 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
tint_over = Color( 1, 1, 0.980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthName" type="Label" parent="."]
margin_left = 29.624
margin_top = 96.2277
margin_right = 79.624
margin_bottom = 112.228
text = "Health: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthVal" type="Label" parent="."]
margin_left = 52.6558
margin_top = 96.593
margin_right = 102.656
margin_bottom = 110.593
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]
